[package]
name = "rust-cli-menu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.19", features = [ "serde" ] }
dotenv = "0.15.0"
lazy_static = "1.4"  # safely mutable global string
rand = { version = "0.7.3", default-features = false, features = ["std"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"
